--- a/Buoi4/login.css
+++ b/Buoi4/login.css
@@ -13,7 +13,7 @@ ul {
 
 .container {
     margin-top: 30px;
-    /* position: fixed; */
+    position: fixed;
     left: 40%;
     bottom: 50%;
     line-height: 1;
@@ -22,7 +22,7 @@ ul {
 input[type=text],
 input[type=password] {
     width: 100%;
-    padding: 10px 20px;
+    padding: 0.75rem 1.5rem;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
@@ -54,4 +54,26 @@ button {
 
 .form{
     justify-content: center;
+}
+
+.heading{
+    font-family: "Titillium Web", sans-serif;
+    font-size: 1.5rem !important;
+    padding-top: 0rem !important;
+    margin-right: 2rem !important;
+    color: #5CB85C !important;
+}
+
+h1{
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
+
+h4{
+    color: #5CB85C;
+    text-decoration: none;
 }
