upload Buoi1-git.html -> Buoi1/Buoi1-git.html upload Buoi4/810313.jpg upload Buoi4/Buoi4.html upload Buoi4/dodge-dodge-challenger-srt-dodge-challenger-dodge-challenger-srt-hellcat-hd-wallpaper-preview.jpg upload Buoi4/login.css upload Buoi6/Buoi6.html upload Buoi6/Buoi6_style.css

--- a/Buoi6/Buoi6_style.css
+++ b/Buoi6/Buoi6_style.css
@@ -12,7 +12,7 @@ a:visited {
 
 ul {
     list-style-type: none;
-    margin: 20px;
+    margin: 0px 20px;
     padding: 20px;
     display: inline;
 }
@@ -33,6 +33,7 @@ input[type=password] {
     border: 1px solid #ccc;
     box-sizing: border-box;
     border-radius: 3px;
+
 }
 
 button {
@@ -87,9 +88,14 @@ h1 {
 
 h4 {
     display: flex;
-    justify-content: center;
     color: #5CB85C;
     text-decoration: none;
+    justify-content: center;
+}
+
+li{
+    display: flex;
+    justify-content: space-around;
 }
 
 body{
