--- a/Challenge3/Challenge3.css
+++ b/Challenge3/Challenge3.css
@@ -3,15 +3,10 @@ body {
     margin: 0px;
 }
 
-.Group {
-    background-color: white;
-}
-
 .Maincontainer {
-    background-color: blue;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 70px;
+    background-color: white;
+    position: absolute;
+    width: 75.8%;
+    height: 69.16%;
+    margin: 8% 12%;
 }
